--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,12 +5,10 @@
     android:gravity="center"
     android:orientation="vertical"
     >
-
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/display_rv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="KenDo Home Fragment"
-        android:gravity="center"
-        />
+        android:layout_height="match_parent"/>
+
 
 </LinearLayout>
