--- a/app/src/main/res/layout/item_home_adapter.xml
+++ b/app/src/main/res/layout/item_home_adapter.xml
@@ -1,37 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    card_view:cardCornerRadius="10dp"
-    >
-    <LinearLayout
+    card_view:cardCornerRadius="4dp">
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center"
-        >
+        android:layout_height="180dp"
+        android:orientation="vertical">
+
+
+        <com.facebook.drawee.view.SimpleDraweeView
+            android:id="@+id/pic"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter" />
 
         <TextView
             android:id="@+id/pic_name"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="name"
             android:gravity="center"
-            android:textSize="22sp"
             android:padding="5dp"
+            android:text="name"
+            android:textSize="22sp"
+            android:background="#00000000"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
             />
-        <com.facebook.drawee.view.SimpleDraweeView
-            android:id="@+id/pic"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:scaleType="fitXY"
-            android:adjustViewBounds="true"
-            />
-
-    </LinearLayout>
+    </RelativeLayout>
 
 
 </android.support.v7.widget.CardView>
