--- a/app/src/main/res/layout/item_home_display_normal.xml
+++ b/app/src/main/res/layout/item_home_display_normal.xml
@@ -10,13 +10,13 @@
         android:id="@+id/item_homedisplay_dec"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="left"
+        android:gravity="left|center"
         android:padding="5dp"
         android:paddingBottom="8dp"
         android:paddingTop="8dp"
         android:text="dec"
-        android:textSize="22sp"
-        android:lines="1"
+        android:textSize="16sp"
+        android:lines="2"
         android:background="#E3F2FD"
         />
 
