--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,13 +2,27 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical"
-    >
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/display_rv"
+    android:orientation="vertical">
+
+    <com.ogaclejapan.smarttablayout.SmartTabLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/viewpagertab"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="48dp"
+        android:background="?attr/colorPrimary"
+        android:visibility="visible"
+        app:stl_defaultTabTextColor="@color/white"
+        app:stl_defaultTabTextMinWidth="80dp"
+        app:stl_defaultTabTextSize="15sp"
+        app:stl_dividerColor="?attr/colorPrimary"
+        app:stl_indicatorColor="@color/white"
+        app:stl_indicatorCornerRadius="1.5dp"
+        app:stl_indicatorInterpolation="smart"
+        app:stl_indicatorThickness="3dp"
+        app:stl_indicatorWithoutPadding="true" />
 
-
+    <android.support.v4.view.ViewPager
+        android:id="@+id/inner_viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
